syntax = "proto3";

package order;
option go_package = "./v1";

import "google/api/annotations.proto";

message Order {
    // The unique id of the order being placed
    int32 id = 1;
    // The unique id of the customer that is placing the order
    int32 customer_id = 2;
    // The total cost of the order
    int32 total = 3;
}

message CreateOrderRequest {
    // The unique id of the customer that is placing the order
    int32 customer_id = 1;
    // The total cost of the order
    int32 total = 2;
}

message CreateOrderResponse {
    oneof response {
        Order order  = 1;
        string error = 2;
    }
}

message GetOrderStatusRequest {
    int32 order_id = 1;
}

message GetOrderStatusResponse {
    string status = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/distributed-transaction/orders/v1"
            body: "*"
        };
    }
    rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse) {
    }
}